启动时更新菜单